--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Ui.FworkerProfileActivity"/>
-        <activity android:name=".Ui.AddBuildingActivity"/>
+        <activity android:name=".Ui.UpdateBldngInfoActivity"></activity>
+        <activity android:name=".Ui.FworkerProfileActivity" />
+        <activity android:name=".Ui.AddBuildingActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
