--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.firebase:firebase-firestore:21.3.0'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
+    implementation "androidx.preference:preference:1.1.0"
+
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
