--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.3.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.1'
     implementation "androidx.preference:preference:1.1.0"
-
+    implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
