--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,8 +44,16 @@ dependencies {
     implementation 'com.etebarian:meow-bottom-navigation:1.0.4'
     implementation 'com.firebaseui:firebase-ui-auth:5.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.github.mumayank:AirLocation:1.2'
+
+    implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.zxing:core:3.3.0'
+
 
     def nav_version = "2.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
