--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.rokkhi.demofieldwork">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
+        android:hardwareAccelerated="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,13 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Ui.NoticeActivity"></activity>
+        <activity android:name=".Ui.GuardTrackListActivity"></activity>
+        <activity android:name=".Ui.NoticeActivity" />
         <activity android:name=".Ui.PaymentHistoryActivity" />
         <activity android:name=".Ui.ProfileActivity" />
         <activity android:name=".Ui.UpdateBldngInfoActivity" />
-        <activity android:name=".Ui.FworkerProfileActivity" /> <!-- <activity android:name=".MainActivity" /> -->
+        <activity android:name=".Ui.FworkerProfileActivity" /> <!-- <activity android:name=".Ui.MyHomeActivity" /> -->
         <activity android:name=".Ui.AddBuildingActivity" />
-        <activity android:name=".Ui.MyHomeActivity">
+        <activity android:name=".Ui.MyHomeActivity" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,6 +56,9 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+
     </application>
+
 
 </manifest>
